platform/k8s/base/services/inventory/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8084
      targetPort: 8084
  type: ClusterIP
