platform/k8s/base/services/inventory/postgres-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-inventory
spec:
  selector:
    app: postgres-inventory
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
