platform/k8s/base/services/inventory/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inventory-service-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: inventory
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Permite tráfico desde cualquier pod del namespace atlas hacia inventory-service
    # Así no rompemos gateway/order/prometheus durante esta fase.
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlas
      ports:
        - protocol: TCP
          port: 8084

  egress:
    # Permite salir hacia PostgreSQL de inventory
    - to:
        - podSelector:
            matchLabels:
              app: postgres-inventory
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092      

    # Permite DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
