platform/k8s/base/services/inventory/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-inventory-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: postgres-inventory
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventory
      ports:
        - protocol: TCP
          port: 5432
